# AI-Tools-Competitor-Monitor

./: .gitignore  AGENT_SETUP_GUIDE.md  README.md  com.guru.daily-scraper.plist  competitor_config.py  crontab-daily-scraper.txt  env_loader.py  pyproject.toml  requirements.txt  run-daily-scraper.ps1  run-daily-scraper.sh  run-weekly-period-workflow.ps1  run-weekly-period-workflow.sh  setup-cron.sh  setup-daily-cron.sh  setup-weekly-cron.sh
analyzers/: daily_ai.py  period_ai.py  video_ai.py
config/: config.yaml
database/: competitor_db.py
plans/: ai-product-transformation-plan.md  youtube-scraping-evaluation.md
reports/: period_extractor.py  period_generator.py
scrapers/: daily_scraper.py  facebook.py  rapidapi.py  website_scraper.py  youtube_official.py
scripts/: backup-db.sh  cleanup-logs.sh  csv_to_config.py
workflows/: period_workflow.py
workflows/output/: .gitkeep
